Make readme file more descriptive

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,12 @@
         </div>
         <div class="weather loading">
             <h2 class="city">Weather in Denver</h2>
+            <label class="switch">
+              <input type="checkbox" id="myCheck">
+            
+             <span class="slider round"></span>
+            <p id="text" style="display:none">Checkbox is CHECKED!</p>
+            </label>
             <h1 class="temp">51°C</h1>
             <div class="flex">
                 <img src="https://openweathermap.org/img/wn/04n.png" alt="" class="icon">
@@ -27,6 +33,12 @@
             <div class="humidity">Humidity: 60% </div>
             <div class="wind">Wind speed: 6.2 km/h</div>
         </div>
+
+       <!-- <div>
+       
+         -->
+        <!-- <p id="text" style="display:none">Checkbox is CHECKED!</p> -->
+       </div>
 
     </div>
 </body>
