--- a/src/index.html
+++ b/src/index.html
@@ -1,46 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@1&display=swap"
+      rel="stylesheet"
+    />
     <title>WeatherApp</title>
-</head>
+  </head>
 
-<body>
-    <div class="card">
-        <div class="search">
-            <input type="text" class="search-bar" placeholder="Search">
-            <button><img id="btn-img" alt=""></button>
-
-        </div>
-        <div class="weather loading">
-            <h2 class="city">Weather in Denver</h2>
-            <label class="switch">
-              <input type="checkbox" id="myCheck">
-            
-             <span class="slider round"></span>
-            <p id="text" style="display:none">Checkbox is CHECKED!</p>
-            </label>
-            <h1 class="temp">51°C</h1>
-            <div class="flex">
-                <img src="https://openweathermap.org/img/wn/04n.png" alt="" class="icon">
-                <div class="description">Cloudy</div>
+  <body>
+    <div class="container py-5">
+      <div class="row justify-content-center">
+        <div class="col-sm-8 col-md-6 col-lg-5">
+          <form id="weather-form" class="card mb-3">
+            <div class="card-body">
+              <div class="mb-3">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="search"
+                  name="location"
+                />
+              </div>
+              <div class="form-check mb-3">
+                <input
+                  class="form-check-input"
+                  type="radio"
+                  name="unit"
+                  id="celcius"
+                  value="metric"
+                  checked
+                />
+                <label class="form-check-label" for="celcius"> celcius </label>
+              </div>
+              <div class="form-check">
+                <input
+                  class="form-check-input"
+                  type="radio"
+                  name="unit"
+                  id="farenheit"
+                  value="imperial"
+                />
+                <label class="form-check-label" for="farenheit">
+                  farenheit
+                </label>
+              </div>
+              <button type="submit" class="btn btn-primary">
+                <i class="bi bi-search"></i>
+              </button>
             </div>
-            <div class="humidity">Humidity: 60% </div>
-            <div class="wind">Wind speed: 6.2 km/h</div>
+          </form>
+
+          <div class="card" id="weather-info">
+            <div class="card-body">
+              <div class="weather loading">
+                <h2 class="city">Weather in Denver</h2>
+                <h1 class="temp">51°C</h1>
+                <div class="flex">
+                  <img
+                    src="https://openweathermap.org/img/wn/04n.png"
+                    alt=""
+                    class="icon"
+                  />
+                  <div class="description">Cloudy</div>
+                </div>
+                <div class="humidity">Humidity: 60%</div>
+                <div class="wind">Wind speed: 6.2 km/h</div>
+              </div>
+            </div>
+          </div>
         </div>
-
-       <!-- <div>
-       
-         -->
-        <!-- <p id="text" style="display:none">Checkbox is CHECKED!</p> -->
-       </div>
-
+      </div>
     </div>
-</body>
-
+  </body>
 </html>
